[gd_scene load_steps=5 format=3 uid="uid://c6ylxqlx37qf4"]

[ext_resource type="Script" uid="uid://bgjgrxvm0xosi" path="res://quest system/scripts/Quests/quest_ui.gd" id="1_2resc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yj18m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2resc"]
bg_color = Color(0.0705882, 0.215686, 0.376471, 0.823529)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c0k6l"]
bg_color = Color(0.054902, 0.160784, 0.282353, 0.686275)
border_color = Color(0.8, 0.8, 0.8, 0)

[node name="QuestUI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_2resc")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_yj18m")

[node name="Backgrounds" type="HBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -250.0
offset_right = 450.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="BG_1" type="Panel" parent="CanvasLayer/Panel/Backgrounds"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_2resc")

[node name="BG_2" type="Panel" parent="CanvasLayer/Panel/Backgrounds"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_c0k6l")

[node name="Contents" type="VBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -250.0
offset_right = 450.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="spacer_" type="Control" parent="CanvasLayer/Panel/Contents"]
layout_mode = 2

[node name="Headings" type="HBoxContainer" parent="CanvasLayer/Panel/Contents"]
layout_mode = 2

[node name="List" type="Label" parent="CanvasLayer/Panel/Contents/Headings"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "AVAILABLE QUESTS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Details" type="Label" parent="CanvasLayer/Panel/Contents/Headings"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "QUEST DETAILS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Details" type="HBoxContainer" parent="CanvasLayer/Panel/Contents"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="spacer_1" type="Control" parent="CanvasLayer/Panel/Contents/Details"]
layout_mode = 2

[node name="QuestList" type="VBoxContainer" parent="CanvasLayer/Panel/Contents/Details"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="spacer_3" type="Control" parent="CanvasLayer/Panel/Contents/Details"]
layout_mode = 2

[node name="spacer_4" type="Control" parent="CanvasLayer/Panel/Contents/Details"]
layout_mode = 2

[node name="QuestDetails" type="VBoxContainer" parent="CanvasLayer/Panel/Contents/Details"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="QuestTitle" type="Label" parent="CanvasLayer/Panel/Contents/Details/QuestDetails"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuestDescription" type="Label" parent="CanvasLayer/Panel/Contents/Details/QuestDetails"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Description"

[node name="QuestObjectives" type="VBoxContainer" parent="CanvasLayer/Panel/Contents/Details/QuestDetails"]
layout_mode = 2

[node name="QuestRewards" type="VBoxContainer" parent="CanvasLayer/Panel/Contents/Details/QuestDetails"]
layout_mode = 2

[node name="spacer_2" type="Control" parent="CanvasLayer/Panel/Contents/Details"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -126.0
offset_top = 39.0
offset_right = -90.0
offset_bottom = 75.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "X"

[connection signal="pressed" from="CanvasLayer/Panel/CloseButton" to="." method="_on_close_button_pressed"]
